force-app/main/default/objects/custom_create40__c/custom_create40__c.object-meta.xml
<CustomObject>
    <label>Custom created object40</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects40</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>