force-app/main/default/objects/custom_create40__c/fields/custom_create_40field518__c.field-meta.xml
<CustomField>
    <fullName>custom_create_40field518__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 40field518</label>
    <type>Checkbox</type>
</CustomField>