force-app/main/default/objects/custom_create40__c/fields/custom_create_40field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_40field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 40field539</label>
    <type>Checkbox</type>
</CustomField>